commit overflow y fix

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     rgba(189, 0, 255, 1) 0%,
     rgba(0, 163, 255, 1) 100%
   );
-  height: 100vh;
+  /* height: 100vh; */
   background-attachment: fixed;
   font-family: "Poppins";
 }
@@ -18,7 +18,9 @@ body {
 .left-col nav {
   position: fixed;
   background: #2c2931;
-  height: 100vh;
+  /* height: 100vh;
+   */
+  height: calc(100vh - 2rem);
   z-index: 1;
   max-width: 250px;
   transform: translateX(-100%);
@@ -118,10 +120,7 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-left: 4rem;
-  }
-  .content {
-    /* padding: 1rem 1.5rem 0 4.5rem; */
+    padding-left: 6rem;
   }
 
   .content h1 {
@@ -170,4 +169,10 @@ header {
   font-size: 0.825rem;
   font-weight: 800;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 1000px) {
+  .cv {
+    padding-left: 4rem;
+  }
 }
